CHORE: apply gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@
 
 .idea
 
-.build
-./basic/**/build
-./boj/**/build
+build/
+/basic/**/build
+/boj/**/build
 
 # User-specific stuff
 .idea/**/workspace.xml
