--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,6 @@ findProject(':boj:2178')?.name = '2178'
 include 'boj'
 include 'boj:2573'
 findProject(':boj:2573')?.name = '2573'
+include 'boj:25757'
+findProject(':boj:25757')?.name = '25757'
 
