--- a/settings.gradle
+++ b/settings.gradle
@@ -37,4 +37,10 @@ include 'programmers:12916'
 findProject(':programmers:12916')?.name = '12916'
 include 'programmers:81301'
 findProject(':programmers:81301')?.name = '81301'
+include 'programmers:12919'
+findProject(':programmers:12919')?.name = '12919'
+include 'programmers:72410'
+findProject(':programmers:72410')?.name = '72410'
+include 'programmers:72410'
+findProject(':programmers:72410')?.name = '72410'
 
