--- a/settings.gradle
+++ b/settings.gradle
@@ -43,4 +43,6 @@ include 'programmers:72410'
 findProject(':programmers:72410')?.name = '72410'
 include 'programmers:72410'
 findProject(':programmers:72410')?.name = '72410'
+include 'programmers:68936'
+findProject(':programmers:68936')?.name = '68936'
 
