FEATURE: boj two, programmers one problem added

--- a/settings.gradle
+++ b/settings.gradle
@@ -49,4 +49,10 @@ include 'programmers:12946'
 findProject(':programmers:12946')?.name = '12946'
 include 'programmers:84512'
 findProject(':programmers:84512')?.name = '84512'
+include 'programmers:42842'
+findProject(':programmers:42842')?.name = '42842'
+include 'boj:1120'
+findProject(':boj:1120')?.name = '1120'
+include 'boj:4779'
+findProject(':boj:4779')?.name = '4779'
 
