--- a/settings.gradle
+++ b/settings.gradle
@@ -57,4 +57,6 @@ include 'boj:4779'
 findProject(':boj:4779')?.name = '4779'
 include 'programmers:67257'
 findProject(':programmers:67257')?.name = '67257'
+include 'programmers:42839'
+findProject(':programmers:42839')?.name = '42839'
 
