--- a/settings.gradle
+++ b/settings.gradle
@@ -3,15 +3,15 @@ include 'boj:2012'
 findProject(':boj:2012')?.name = '2012'
 include 'basic:fundamental'
 findProject(':basic:fundamental')?.name = 'fundamental'
-include 'boj:2178'
+/*include 'boj:2178'
 findProject(':boj:2178')?.name = '2178'
 include 'boj'
 include 'boj:2573'
 findProject(':boj:2573')?.name = '2573'
 include 'boj:25757'
-findProject(':boj:25757')?.name = '25757'
+findProject(':boj:25757')?.name = '25757'*/
 include 'programmers'
-include 'programmers:87377'
+/*include 'programmers:87377'
 findProject(':programmers:87377')?.name = '87377'
 include 'programmers:68645'
 findProject(':programmers:68645')?.name = '68645'
@@ -62,5 +62,11 @@ findProject(':programmers:42839')?.name = '42839'
 include 'programmers:64064'
 findProject(':programmers:64064')?.name = '64064'
 include 'programmers:42748'
-findProject(':programmers:42748')?.name = '42748'
+findProject(':programmers:42748')?.name = '42748'*/
+//include 'programmers:68644'
+//findProject(':programmers:68644')?.name = '68644'
+//include 'programmers:42747'
+//findProject(':programmers:42747')?.name = '42747'
+include 'programmers:12917'
+findProject(':programmers:12917')?.name = '12917'
 
