--- a/settings.gradle
+++ b/settings.gradle
@@ -67,10 +67,10 @@ findProject(':programmers:42748')?.name = '42748'*/
 //findProject(':programmers:68644')?.name = '68644'
 //include 'programmers:42747'
 //findProject(':programmers:42747')?.name = '42747'
-include 'programmers:12917'
-findProject(':programmers:12917')?.name = '12917'
-include 'programmers:12915'
-findProject(':programmers:12915')?.name = '12915'
+//include 'programmers:12917'
+//findProject(':programmers:12917')?.name = '12917'
+//include 'programmers:12915'
+//findProject(':programmers:12915')?.name = '12915'
 include 'programmers:42746'
 findProject(':programmers:42746')?.name = '42746'
 
