--- a/settings.gradle
+++ b/settings.gradle
@@ -73,4 +73,6 @@ findProject(':programmers:42748')?.name = '42748'*/
 //findProject(':programmers:12915')?.name = '12915'
 include 'programmers:42746'
 findProject(':programmers:42746')?.name = '42746'
+include 'programmers:43105'
+findProject(':programmers:43105')?.name = '43105'
 
